--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/inspiration">Inspiration Websites</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/loadData">Load CSV Files</a>
+                <a class="nav-link" href="/loadData" onclick='warning()'>Load CSV Files</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/deleteTable">Drop Database</a>
