--- a/templates/api_docs.html
+++ b/templates/api_docs.html
@@ -12,114 +12,115 @@
             <h2>Optional parameters</h2>
             <p><em>&lt;count_id&gt;</em> (string) - Specific Country ID used to retrieve a single country
             <br><em>&lt;count_name&gt;</em> (string) - Specific Country Name used to create a single with the specified name</p>
-            <h2>Example Usages</h2>
-            <p>
+            
+            <div class="apiPanel">
                 <h3>GET /countries</h3>
                 <em>Returns:</em>
                 <blockquote class="blockquote">
-                <code>
-                    {"
-                        _id":{"$oid":"5ee5d432b481a2626b4755e5"},
-                        "name":"Afghanistan",
-                        "data":{
-                            "cell_phones":{
-                                "1960":"0",
-                                "1961" ... },
-                            "internet_users":{
-                                "1960":"",
-                                "1961":"" ...},
-                            "life_expectancy_years":{
-                                "1800":"28.2",
-                                "1801""27.9" ..},
-                            "population_total":{"55":"0","55" ... }
-                        },
-                        _id":{"$oid":"5ee5d432b481a2626b4755e5"},
-                        "name":"Albania",
-                        "data":{
-                            "cell_phones":{
-                                "1960":"0",
-                                "1961" ... },
-                            "internet_users":{
-                                "1960":"",
-                                "1961":"" ...},
-                            "life_expectancy_years":{
-                                "1800":"28.2",
-                                "1801""27.9" ..},
-                            "population_total":{"55":"0","55" ... }
-                        } ...
-                    }
-                     </code>
-            </blockquote>
-
-            <h3>GET /countries/<em>5ee5d432b481a2626b4755e5</em></h3>
-            <em>Returns:</em>
-            <blockquote class="blockquote">
-               <code>
-                    {"
-                        _id":{"$oid":"5ee5d432b481a2626b4755e5"},
-                        "name":"Afghanistan",
-                        "data":{
-                            "cell_phones":{
-                                "1960":"0",
-                                "1961" ... },
-                            "internet_users":{
-                                "1960":"",
-                                "1961":"" ...},
-                            "life_expectancy_years":{
-                                "1800":"28.2",
-                                "1801""27.9" ..},
-                            "population_total":{"55":"0","55" ... }
+                    <code>
+                        {"
+                            _id":{"$oid":"5ee5d432b481a2626b4755e5"},
+                            "name":"Afghanistan",
+                            "data":{
+                                "cell_phones":{
+                                    "1960":"0",
+                                    "1961" ... },
+                                "internet_users":{
+                                    "1960":"",
+                                    "1961":"" ...},
+                                "life_expectancy_years":{
+                                    "1800":"28.2",
+                                    "1801""27.9" ..},
+                                "population_total":{"55":"0","55" ... }
+                            },
+                            _id":{"$oid":"5ee5d432b481a2626b4755e5"},
+                            "name":"Albania",
+                            "data":{
+                                "cell_phones":{
+                                    "1960":"0",
+                                    "1961" ... },
+                                "internet_users":{
+                                    "1960":"",
+                                    "1961":"" ...},
+                                "life_expectancy_years":{
+                                    "1800":"28.2",
+                                    "1801""27.9" ..},
+                                "population_total":{"55":"0","55" ... }
+                            } ...
                         }
-                    }
+                     </code>
+                </blockquote>
+                <strong class="error">ERRORS:</strong>
+                <br>
+                <ul>
+                    <li><em>"INTERNAL SERVER ERROR", 500</em> - The Server was not able to recieve the request. Wait a few minutes and try again.</li>
+                </ul>
+            </div>
+
+            <div class="apiPanel">
+                <h3>GET /countries/<em>5ee5d432b481a2626b4755e5</em></h3>
+                <em>Returns:</em>
+                <blockquote class="blockquote">
+                <code>
+                        {"
+                            _id":{"$oid":"5ee5d432b481a2626b4755e5"},
+                            "name":"Afghanistan",
+                            "data":{
+                                "cell_phones":{
+                                    "1960":"0",
+                                    "1961" ... },
+                                "internet_users":{
+                                    "1960":"",
+                                    "1961":"" ...},
+                                "life_expectancy_years":{
+                                    "1800":"28.2",
+                                    "1801""27.9" ..},
+                                "population_total":{"55":"0","55" ... }
+                            }
+                        }
+                    </code>
+                </blockquote>
+                <strong class="error">ERRORS:</strong>
+                <br>
+                <ul>
+                    <li><em>"NOT FOUND", 404</em> - The Specified Country ID was not able to be found in the database.</li>
+                    <li><em>"INTERNAL SERVER ERROR", 500</em> - The Server was not able to recieve the request. Wait a few minutes and try again.</li>
+                </ul>
+            </div>
+
+            <div class="apiPanel">
+                <h3>POST /countries/<em>NZ</em></h3>
+                <em>Returns:</em>
+                <blockquote class="blockquote">
+                <code>
+                    "NZ CREATED", 201"
                 </code>
                 </blockquote>
-            </p>
+                <strong class="error">ERRORS:</strong>
+                <br>
+                <ul>
+                    <li><em>"BAD REQUEST", 400</em> - Will occur if the post request is recieved without a string attached.</li>
+                    <li><em>"INTERNAL SERVER ERROR", 500</em> - The server was not able to recieve the request. Wait a few minutes and try again.</li>
+                </ul>
+            </div>
+
+            <div class="apiPanel">
+                <h3>DELETE /countries/<em>5ee5d432b481a2626b4755e5</em></h3>
+                <em>Returns:</em>
+                <blockquote class="blockquote">
+                <code>
+                    "OK", 200"
+                </code>
+                </blockquote>
+                <strong class="error">ERRORS:</strong>
+                <br>
+                <ul>
+                    <li><em>"BAD REQUEST", 400</em> - Will occur if the post request is recieved withOUT attached.</li>
+                    <li><em>"INTERNAL SERVER ERROR", 500</em> - The Server was not able to recieve the request. Wait a few minutes and try again.</li>
+                    <li><em>"NOT FOUND ", 404</em> - The Specified Country ID was not able to be found in the database.</li>
+                </ul>
+            </div>
+            <br>
     </main>
 </body>
 </html>
-
-<!--
-
-    List users
-GET /users - list all users
-GET /users/<optional:user_id> - list a specific user
-
-Optional parameters
-user_id (string) User ID used to specify a single user
-
-Example usage
-GET /users
-returns
-[
-    { 
-        user_id: "123", 
-        first_name: "John", 
-        last_name: "Samuels" 
-    },
-    {
-        user_id: "456",
-        first_name: "Alex",
-        last_name: "Michaels"
-    }
-]
-
-GET /users/123
-returns
-{ 
-    user_id: "123", 
-    first_name: "John", 
-    last_name: "Samuels" 
-}
-
-Errors
-Resource not found error - 404 Not Found
-
-GET /users/789
-returns
-{
-    "type": "error",
-    "status": 404,
-    "code": "not_found",
-    "message":"Resource not found. Please ensure resource exists."
-}
--->
