Updated API Docs

--- a/templates/api_docs.html
+++ b/templates/api_docs.html
@@ -96,7 +96,9 @@
                     "NZ CREATED", 201"
                 </code>
                 </blockquote>
-                <strong class="error">ERRORS:</strong>
+                <em>Note : Any entries that have multiple words (South East Asia) should be sent seperated by "_" (South_East_Asia). The API will find and replace underscores with spaces before saving to the database.</em><br>
+                
+                <br><strong class="error">ERRORS:</strong>
                 <br>
                 <ul>
                     <li><em>"BAD REQUEST", 400</em> - Will occur if the post request is recieved without a string attached.</li>
